--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <div id="container">
+        <div id="janken-buttons">
+            <button id="btnRock">Rock</button>
+            <button id="btnPaper">Paper</button>
+            <button id="btnScissors">Scissors</button>
+        </div>
+        <div id="results">Player: 0, COM: 0</div>
+    </div>
     <script src="./scripts/script.js"></script>
 </body>
+
 </html>
